--- a/app/views/addressInfo.html
+++ b/app/views/addressInfo.html
@@ -1,9 +1,11 @@
 <div class="container" style="padding-top: 50px;">
-<h1>Address
-    <small>View information about an Ethereum Address</small>
-</h1>
+
 
 <div id="address-97785883" class="addressdiv">
+    <h1>Address
+        <small>View information about an Ethereum Address</small>
+    </h1>
+
     <table class="table table-striped" cellpadding="0" cellspacing="0" style="padding:0px;float:left;margin:0px;width:100%">
         <tbody>
         <tr>
@@ -14,11 +16,7 @@
     <table class="table table-striped">
         <tbody>
         <tr>
-            <td>Balance (Wei)</td>
-            <td>{{balance}}</a></td>
-        </tr>
-        <tr>
-            <td>Balance (Ether)</td>
+            <td>Balance (Ki)</td>
             <td>{{balanceInEther}}</a></td>
         </tr>
         </tbody>
